benchmarks/verus/bignum/vericoder_glm_15-09_18h46/debug/bignum_DivMod_Compare_iter1_error.log
=== Verification Error - Iteration 1 ===
File: /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/files/bignum_DivMod_Compare.rs
Time: 2025-09-15 20:20:05

Full Error Output:
--------------------------------------------------------------------------------
Compilation failed: error[E0282]: type annotations needed
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_DivMod_Compare_impl.rs:31:33
   |
31 |         (if s.index(0) == '1' { 1 } else { 0 }) 
   |                                 ^ cannot infer type of the type parameter `hint_please_add_suffix_on_literal_like_100u32_or_100int_or_100nat` declared on the function `spec_literal_integer`
   |
help: consider specifying the generic argument
   |
31 |         (if s.index(0) == '1' { 1::<hint_please_add_suffix_on_literal_like_100u32_or_100int_or_100nat> } else { 0 }) 
   |                                  +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_DivMod_Compare_impl.rs:48:5
   |
36 | exec fn str_to_int(s: &[char]) -> (res: nat)
   |                                         --- expected `verus_builtin::nat` because of return type
...
48 |     result
   |     ^^^^^^ expected `nat`, found integer

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_DivMod_Compare_impl.rs:54:13
   |
54 |     if n == 0 {
   |        -    ^ expected `nat`, found integer
   |        |
   |        expected because this is `verus_builtin::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_DivMod_Compare_impl.rs:59:17
   |
59 |     while num > 0
   |           ---   ^ expected `nat`, found integer
   |           |
   |           expected because this is `verus_builtin::nat`

error[E0599]: no method named `pow` found for struct `verus_builtin::nat` in the current scope
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_DivMod_Compare_impl.rs:62:35
   |
62 |             n == num * (2 as nat).pow(digits.len() as nat) + reversed_str_to_int(digits@),
   |                                   ^^^ method not found in `nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_DivMod_Compare_impl.rs:65:18
   |
65 |         if num % 2 == 0 {
   |            ---   ^ expected `nat`, found integer
   |            |
   |            expected because this is `verus_builtin::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_DivMod_Compare_impl.rs:65:23
   |
65 |         if num % 2 == 0 {
   |            -------    ^ expected `nat`, found integer
   |            |
   |            expected because this is `verus_builtin::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_DivMod_Compare_impl.rs:70:21
   |
70 |         num = num / 2;
   |               ---   ^ expected `nat`, found integer
   |               |
   |               expected because this is `verus_builtin::nat`

error: aborting due to 8 previous errors

Some errors have detailed explanations: E0282, E0308, E0599.
For more information about an error, try `rustc --explain E0282`.

--------------------------------------------------------------------------------

Additional Output:
error[E0282]: type annotations needed
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_DivMod_Compare_impl.rs:31:33
   |
31 |         (if s.index(0) == '1' { 1 } else { 0 }) 
   |                                 ^ cannot infer type of the type parameter `hint_please_add_suffix_on_literal_like_100u32_or_100int_or_100nat` declared on the function `spec_literal_integer`
   |
help: consider specifying the generic argument
   |
31 |         (if s.index(0) == '1' { 1::<hint_please_add_suffix_on_literal_like_100u32_or_100int_or_100nat> } else { 0 }) 
   |                                  +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_DivMod_Compare_impl.rs:48:5
   |
36 | exec fn str_to_int(s: &[char]) -> (res: nat)
   |                                         --- expected `verus_builtin::nat` because of return type
...
48 |     result
   |     ^^^^^^ expected `nat`, found integer

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_DivMod_Compare_impl.rs:54:13
   |
54 |     if n == 0 {
   |        -    ^ expected `nat`, found integer
   |        |
   |        expected because this is `verus_builtin::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_DivMod_Compare_impl.rs:59:17
   |
59 |     while num > 0
   |           ---   ^ expected `nat`, found integer
   |           |
   |           expected because this is `verus_builtin::nat`

error[E0599]: no method named `pow` found for struct `verus_builtin::nat` in the current scope
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_DivMod_Compare_impl.rs:62:35
   |
62 |             n == num * (2 as nat).pow(digits.len() as nat) + reversed_str_to_int(digits@),
   |                                   ^^^ method not found in `nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_DivMod_Compare_impl.rs:65:18
   |
65 |         if num % 2 == 0 {
   |            ---   ^ expected `nat`, found integer
   |            |
   |            expected because this is `verus_builtin::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_DivMod_Compare_impl.rs:65:23
   |
65 |         if num % 2 == 0 {
   |            -------    ^ expected `nat`, found integer
   |            |
   |            expected because this is `verus_builtin::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_DivMod_Compare_impl.rs:70:21
   |
70 |         num = num / 2;
   |               ---   ^ expected `nat`, found integer
   |               |
   |               expected because this is `verus_builtin::nat`

error: aborting due to 8 previous errors

Some errors have detailed explanations: E0282, E0308, E0599.
For more information about an error, try `rustc --explain E0282`.
